Ridding of the unnecessary CSS and fixing some spacing on the mobile menu

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,6 @@
   /* Adds page style to all the folowing pages */
   
   .home,
-  .services,
-  .products,
   .brotherhood,
   .comm-serve,
   .prof-def,
@@ -19,24 +17,6 @@
     align-items: center;
     justify-content: center;
     font-size: 3rem;
-  }
-  
-  .services {
-    background-image: url('../public/images/img-2.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: #fff;
-    font-size: 100px;
-  }
-  
-  .products {
-    background-image: url('../public/images/img-1.jpg');
-    background-position: center;
-    background-size: fill;
-    background-repeat: no-repeat;
-    color: #fff;
-    font-size: 100px;
   }
   
   .brotherhood {
