--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -99,7 +99,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 100vh;
+      height: 95vh;
       position: fixed;
       top: 80px;
       left: -100%;
@@ -161,7 +161,7 @@
       font-size: 1.5rem;
       background-color: transparent;
       color: #fff;
-      padding: 14px 20px;
+      padding: .5rem 2rem;
       border: 1px solid #fff;
       transition: all 0.3s ease-out;
     }
